fix: color contrast

--- a/port.css
+++ b/port.css
@@ -30,12 +30,13 @@
     }
     aside {
         display: flex;
-        gap: 75px; 
-        padding: 10px;
+        padding: 5px;
         position: absolute;
         top: 0;
         left: 0;
-        margin: 10px;
+        margin: 5px;
+        color: white;
+
         /* background-color: rgba(0, 128, 255, 0.605); */
         /* width: 40px; */
     }
