--- a/portfolio.css
+++ b/portfolio.css
@@ -9,7 +9,8 @@ aside{
     /* padding: 20px; */
 }
 a{
-    color: white;
+    color: yellow;
+    font: initial;
 }
 *{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
